# NetGuard

./: .gitignore  CMakeLists.txt  NetGuard  README.en.md  README.md  build_and_run.bat  build_and_run.sh
assets/models/: map.mtl
assets/models/neocat/: neocat.mtl
include/: collisions.hpp  functions.h  globals.hpp  matrices.h  matrices.hpp  scene.h  scene.hpp  shader_loader.hpp  utils.h  utils.hpp
include/core/: scene.h  scene.hpp  shader_loader.h  shader_loader.hpp
include/game/: Camera.h  camera.hpp  defense_unit.hpp  game_unit.hpp  invasion_unit.hpp  net_guard.hpp  progress_bar.hpp
include/input/: mouse_keyboard_callbacks.h  mouse_keyboard_callbacks.hpp  window_callbacks.hpp
include/utils/: model_utils.h  model_utils.hpp  obj_loader_utils.h  obj_loader_utils.hpp  text_rendering.h  text_rendering.hpp  texture_utils.hpp  utils.hpp
src/: collisions.cpp  main.cpp  matrices.cpp
src/core/: glad.c  shader_fragment.glsl  shader_loader.cpp  shader_vertex.glsl
src/input/: mouse_keyboard_callbacks.cpp  window_callbacks.cpp
src/utils/: model_utils.cpp  obj_loader_utils.cpp  stb_image.cpp  text_rendering.cpp  texture_utils.cpp
